--- a/examples/example-lib2/package.json
+++ b/examples/example-lib2/package.json
@@ -29,15 +29,7 @@
   ],
   "bundledDependencies": [],
   "devDependencies": {
-    "@starterkit/bin": "*",
-    "@types/fs-extra": "7.0.0",
-    "@types/jest": "24.0.13",
-    "@typescript-eslint/eslint-plugin": "1.9.0",
-    "@typescript-eslint/parser": "1.9.0",
-    "eslint-plugin-prettier": "3.1.0",
-    "fs-extra": "8.0.1",
-    "prettier": "1.17.1",
-    "yarn": "1.16.0"
+    "@starterkit/bin": "*"
   },
   "dependencies": {
     "@scope/example-lib1": "*"
