--- a/examples/example-nightwatch1/package.json
+++ b/examples/example-nightwatch1/package.json
@@ -8,15 +8,14 @@
     "build": "tsc -b tsconfig.json --pretty",
     "test": "run-p test:*",
     "test:e2e": "yarn clean && yarn build && nightwatch",
-    "lint": "tslint -c ../../tslint.json --project tsconfig.json -t codeFrame"
+    "lint": "npx eslint --ignore-path=../../.gitignore --fix . --ext js --ext ts"
   },
-  "dependencies": {
+  "devDependencies": {
     "@types/chromedriver": "2.38.0",
     "@types/nightwatch": "^0.9.12",
     "chromedriver": "^74.0.0",
     "json5": "2.1.0",
     "nightwatch": "^1.0.19",
-    "puppeteer": "1.14.0",
-    "typescript": "^3.4.5"
+    "puppeteer": "1.14.0"
   }
 }
