--- a/examples/example-babylon1/package.json
+++ b/examples/example-babylon1/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "clean": "sk-clean",
+    "clean": "starterkit-clean",
     "build": "npx yarn clean && parcel build --no-minify --no-source-maps index.html",
     "compile": "run-p compile:*",
     "compile:js": "npx babel src --root-mode upward --verbose --out-dir node_modules/.tmp/build.babel --extensions \".ts,.tsx\" --source-maps true",
