--- a/package.json
+++ b/package.json
@@ -109,7 +109,9 @@
     "eslint-plugin-node": "9.0.1",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-promise": "4.1.1",
+    "eslint-plugin-sonarjs": "0.3.0",
     "eslint-plugin-standard": "4.0.0",
+    "eslint-plugin-unicorn": "8.0.2",
     "esm": "3.2.22",
     "figures": "3.0.0",
     "fs-extra": "8.0.1",
