--- a/lib/tools/package.json
+++ b/lib/tools/package.json
@@ -12,7 +12,8 @@
     "npm": ">= 999-this-repo-is-yarn-only:see-npmrc"
   },
   "scripts": {
-    "test": "exit 0 || true"
+    "test": "exit 0 || true",
+    "compile": "tsc -b tsconfig.json --pretty"
   },
   "dependencies": {
     "@types/execa": "0.9.0",
