--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../tsconfig.json",
   "include": ["./**/*"],
   "compilerOptions": {
     "outDir": "./node_modules/.tmp/build.tsc",
