--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "npm": ">= 999-this-repo-is-yarn-only:see-npmrc"
   },
   "workspaces": [
-    "lib/*",
+    "lib",
     "examples/*",
     "packages/*"
   ],
@@ -62,11 +62,11 @@
     "fix": "npx yarn prettier && yarn lint",
     "lint": "npx run-s lint:*",
     "lint:js": "npx eslint . --ext js --ext ts --fix",
-    "postinstall": "node lib/bin/postinstall.js",
+    "postinstall": "starterkit-postinstall",
     "preinstall": "rm -f .git/hooks/* || true",
     "prettier": "npx prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
     "test": "npx run-p -l test:unit test:e2e",
-    "test:unit": "npx jest -w 3 -c lib/config/jest.config.js",
+    "test:unit": "npx jest -w 3",
     "test:e2e": "npx lerna run test:e2e --stream",
     "test:serial": "npx lerna exec -- yarn test",
     "test:watch": "npx yarn test -- --watch --notify",
@@ -128,6 +128,7 @@
     "yarn": "1.16.0"
   },
   "devDependencies": {
+    "@netent/starterkit": "*",
     "diff-so-fancy": "1.2.5",
     "lint-staged": "8.1.6",
     "node-notifier": "5.4.0"
