--- a/package.json
+++ b/package.json
@@ -54,10 +54,9 @@
   ],
   "scripts": {
     "build": "npx lerna run build --parallel --stream",
-    "ci": "lib/bin/ci",
-    "clean": "node lib/bin/clean.js",
+    "ci": "node_modules/@netent/starterkit/bin/ci",
+    "clean": "starterkit-clean",
     "compile": "run-p compile:*",
-    "compile:root": "npx tsc --build lib/config/tsconfig.root.json --pretty",
     "compile:packages": "npx lerna run compile --parallel --stream",
     "fix": "npx yarn prettier && yarn lint",
     "lint": "npx run-s lint:*",
@@ -70,7 +69,7 @@
     "test:e2e": "npx lerna run test:e2e --stream",
     "test:serial": "npx lerna exec -- yarn test",
     "test:watch": "npx yarn test -- --watch --notify",
-    "validate": "node lib/bin/validate.js"
+    "validate": "node node_modules/@netent/starterkit/bin/validate"
   },
   "prettier": {
     "bracketSpacing": true,
