--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "packages": ["lib", "examples/*", "config/*", "packages/*"],
+  "packages": [".starterkit", "examples/*", "config/*", "packages/*"],
   "command": {
     "version": {
       "allowBranch": ["master"],
