--- a/.gitignore
+++ b/.gitignore
@@ -257,3 +257,9 @@ settings.xml
 
 # Avoid using same foldername as 'npm pack'
 package
+
+
+# -----------------------------------------------------------------------------
+### GIT LFS Binary
+# -----------------------------------------------------------------------------
+.bin
