--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # Comma-separated paths to directories with sources (required)
-sonar.sources=src
+sonar.sources=src,packages
 
 # Exclude third party libraries
 sonar.exclusions=**/*.html,**/*.obj,**/*.g3dj,**/*.obj,**/*.jpg,**/*.lock,**/*.html,**/*.txt,**/*.xml,**/*.css,**/*.md,**/*.vert,**/*.frag,**/*.ts,**/*.tsx,**/*.json
