- Cleanup output - Bump packages

--- a/.editorconfig
+++ b/.editorconfig
@@ -26,5 +26,5 @@ charset = utf-8
 trim_trailing_whitespace = true
 
 [*.md]
-max_line_length = 0
+insert_final_newline = false
 trim_trailing_whitespace = false
