--- a/.starterkit/package.json
+++ b/.starterkit/package.json
@@ -15,14 +15,20 @@
   },
   "devDependencies": {
     "@types/execa": "0.9.0",
-    "@types/lodash": "4.14.133",
+    "@types/lodash": "4.14.134",
+    "cloc": "2.5.0",
     "execa": "1.0.0",
     "glob": "7.1.4",
     "lodash": "4.17.11",
     "pkg-up": "3.1.0"
   },
   "dependencies": {
+    "@jest/types": "24.8.0",
     "chalk": "2.4.2",
-    "lodash": "4.17.11"
+    "fs-extra": "8.0.1",
+    "is-ci": "2.0.0",
+    "lodash": "4.17.11",
+    "ora": "3.4.0",
+    "ts-node": "8.2.0"
   }
 }
