--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
     "compile": "run-p compile:*",
     "compile:packages": "npx lerna run compile --parallel --stream",
     "fix": "npx yarn prettier && yarn lint",
-    "lint": "npx run-s lint:*",
-    "lint:js": "npx eslint . --ext js --ext ts --fix",
+    "lint": "run-s lint:*",
+    "lint:js": "eslint . --ext js --ext ts --fix",
     "postinstall": "starterkit-postinstall",
-    "preinstall": "rm -f .git/hooks/* || true",
     "prettier": "npx prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
     "test": "npx run-p -l test:unit test:e2e",
     "test:unit": "npx jest -w 3",
