--- a/package.json
+++ b/package.json
@@ -65,28 +65,28 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "7.4.4",
     "@babel/runtime-corejs3": "7.4.5",
-    "@types/fs-extra": "7.0.0",
-    "@types/jest": "24.0.13",
-    "@typescript-eslint/eslint-plugin": "1.10.2",
-    "@typescript-eslint/parser": "1.10.2",
+    "@types/fs-extra": "8.0.0",
+    "@types/jest": "24.0.15",
+    "@typescript-eslint/eslint-plugin": "1.11.0",
+    "@typescript-eslint/parser": "1.11.0",
     "babel-plugin-loop-optimizer": "1.4.1",
-    "blend-promise-utils": "1.22.0",
+    "blend-promise-utils": "1.22.4",
     "chalk": "2.4.2",
     "del-cli": "2.0.0",
-    "eslint": "6.0.0-alpha.0",
-    "eslint-config-prettier": "4.3.0",
+    "eslint": "6.0.1",
+    "eslint-config-prettier": "6.0.0",
     "eslint-config-standard": "12.0.0",
     "eslint-plugin-cypress": "2.2.1",
-    "eslint-plugin-import": "2.17.3",
+    "eslint-plugin-import": "2.18.0",
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-prettier": "3.1.0",
-    "eslint-plugin-promise": "4.1.1",
+    "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-sonarjs": "0.4.0",
     "eslint-plugin-standard": "4.0.0",
-    "eslint-plugin-unicorn": "9.1.0",
+    "eslint-plugin-unicorn": "9.1.1",
     "figures": "3.0.0",
-    "fs-extra": "8.0.1",
-    "husky": "2.4.0",
+    "fs-extra": "8.1.0",
+    "husky": "3.0.0",
     "jest": "24.8.0",
     "jest-cli": "24.8.0",
     "lerna": "^3.15.0",
@@ -94,14 +94,14 @@
     "npm-run-all": "4.1.5",
     "prettier": "1.18.2",
     "ts-jest": "24.0.2",
-    "ts-node": "8.2.0",
-    "typescript": "^3.4.5",
+    "ts-node": "8.3.0",
+    "typescript": "^3.5.2",
     "yarn": "1.16.0"
   },
   "devDependencies": {
     "@netent/starterkit": "*",
     "diff-so-fancy": "1.2.5",
-    "lint-staged": "8.2.0",
+    "lint-staged": "9.0.1",
     "node-notifier": "5.4.0"
   }
 }
