--- a/.starterkit/package.json
+++ b/.starterkit/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@jest/types": "24.8.0",
+    "blend-promise-utils": "1.22.4",
     "chalk": "2.4.2",
     "fs-extra": "8.1.0",
     "is-ci": "2.0.0",
