Use npx whenever possible

--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
   "scripts": {
     "build": "npx lerna run build --parallel --stream",
     "ci": "node_modules/@netent/starterkit/bin/ci",
-    "clean": "starterkit-clean",
-    "compile": "run-p compile:*",
+    "clean": "npx starterkit-clean",
+    "compile": "npx run-p compile:*",
     "compile:packages": "npx lerna run compile --parallel --stream",
     "fix": "npx yarn prettier && yarn lint",
-    "lint": "run-s lint:*",
-    "lint:js": "eslint . --ext js --ext ts --fix",
-    "postinstall": "starterkit-postinstall",
+    "lint": "npx run-s lint:*",
+    "lint:js": "npx eslint . --ext js --ext ts --fix",
+    "postinstall": "npx starterkit-postinstall",
     "prettier": "npx prettier -c --write \"**/*.{ts,js,tsx,jsx,json,md,html,css}\"",
     "test": "npx run-p -l test:unit test:e2e",
     "test:unit": "npx jest -w 3",
