Linting guidelines in Sthlm Studio Update with Johans comments
Resolves STI-11

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -95,7 +95,7 @@
     "moduleResolution": "node",               // 🔅 Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6).
     "resolveJsonModule": true,                // 🔅 Allows for importing, extracting types from and generating .json files
     // "paths": {},                           // 🔅 A series of entries which re-map imports to lookup locations relative to the 'baseUrl'.
-    "preserveConstEnums": true,                   // 🔅 Do not erase const enum declarations in generated code. See const enums documentation for more details.
+    // "preserveConstEnums": false,           // 🔅 Do not erase const enum declarations in generated code. See const enums documentation for more details.
     // "preserveSymlinks": true,              // 🔅 Do not resolve the real path of symlinks.
     // "rootDirs": [],                        // 🔅 List of root folders whose combined content represents the structure of the project at runtime.
     "typeRoots": [                            // 🔅 List of folders to include type definitions from.
