--- a/examples/example-babylon1/package.json
+++ b/examples/example-babylon1/package.json
@@ -11,7 +11,7 @@
     "compile:ts": "del dist && tsc -b tsconfig.json --pretty",
     "build:types": "npx tsc --emitDeclarationOnly",
     "start": "npx parcel index.html",
-    "lint": "npx eslint . --ignore-path=../../.npmignore --ext js --ext ts --fix",
+    "lint": "npx eslint . --ignore-path=../../.eslintignore --ext js --ext ts --fix",
     "test": "jest -w 4 --detectOpenHandles --notify"
   },
   "devDependencies": {
