--- a/examples/example-lib2/package.json
+++ b/examples/example-lib2/package.json
@@ -20,7 +20,7 @@
     "compile": "run-p compile:*",
     "compile:js": "npx babel src --root-mode upward --verbose --out-dir node_modules/.tmp/build.babel --extensions \".ts,.tsx\" --source-maps inline",
     "compile:ts": "tsc -b tsconfig.json --pretty",
-    "lint": "npx eslint . --ignore-path=../../.npmignore --ext js --ext ts --fix",
+    "lint": "npx eslint . --ignore-path=../../.eslintignore --ext js --ext ts --fix",
     "test": "jest -w 3 --detectOpenHandles --notify"
   },
   "files": [
