--- a/.starterkit/package.json
+++ b/.starterkit/package.json
@@ -28,6 +28,7 @@
     "@jest/types": "24.8.0",
     "blend-promise-utils": "1.22.4",
     "chalk": "2.4.2",
+    "figures": "3.0.0",
     "fs-extra": "8.1.0",
     "is-ci": "2.0.0",
     "lodash": "4.17.11",
