--- a/.starterkit/package.json
+++ b/.starterkit/package.json
@@ -16,22 +16,29 @@
     "test": "exit 0 || true"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.136",
-    "cloc": "2.5.0",
-    "execa": "2.0.3",
-    "glob": "7.1.4",
-    "lodash": "4.17.11",
-    "pkg-up": "3.1.0"
-  },
-  "dependencies": {
     "@jest/types": "24.8.0",
+    "@types/fs-extra": "8.0.0",
+    "@types/lodash": "4.14.136",
     "blend-promise-utils": "1.24.0",
     "chalk": "2.4.2",
+    "cloc": "2.5.0",
+    "del-cli": "2.0.0",
+    "diff-so-fancy": "1.2.5",
+    "execa": "2.0.3",
     "figures": "3.0.0",
     "fs-extra": "8.1.0",
+    "glob": "7.1.4",
+    "husky": "3.0.3",
     "is-ci": "2.0.0",
+    "lint-staged": "9.2.1",
     "lodash": "4.17.15",
+    "node-notifier": "5.4.1",
+    "npm-run-all": "4.1.5",
     "ora": "3.4.0",
-    "ts-node": "8.3.0"
-  }
+    "pkg-up": "3.1.0",
+    "prettier": "1.18.2",
+    "ts-node": "8.3.0",
+    "yarn": "1.17.3"
+  },
+  "dependencies": {}
 }
