--- a/package.json
+++ b/package.json
@@ -65,13 +65,10 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/register": "7.5.5",
     "@babel/runtime-corejs3": "7.5.5",
-    "@types/fs-extra": "8.0.0",
     "@types/jest": "24.0.17",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "babel-plugin-loop-optimizer": "1.4.1",
-    "chalk": "2.4.2",
-    "del-cli": "2.0.0",
     "eslint": "6.1.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-config-standard": "13.0.1",
@@ -82,24 +79,14 @@
     "eslint-plugin-sonarjs": "0.4.0",
     "eslint-plugin-standard": "4.0.0",
     "eslint-plugin-unicorn": "10.0.0",
-    "figures": "3.0.0",
-    "fs-extra": "8.1.0",
-    "husky": "3.0.3",
     "jest": "24.8.0",
     "jest-cli": "24.8.0",
     "lerna": "^3.16.4",
-    "lodash": "4.17.15",
-    "npm-run-all": "4.1.5",
-    "prettier": "1.18.2",
     "ts-jest": "24.0.2",
     "ts-node": "8.3.0",
-    "typescript": "^3.5.3",
-    "yarn": "1.17.3"
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
-    "@netent/starterkit": "*",
-    "diff-so-fancy": "1.2.5",
-    "lint-staged": "9.2.1",
-    "node-notifier": "5.4.1"
+    "@netent/starterkit": "*"
   }
 }
