Move extra .gitignore to root

--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,4 @@ package
 ### Temporary binary files
 # -----------------------------------------------------------------------------
 .bin
+.starterkit/bin/git-lfs
