--- a/examples/example-lib1/package.json
+++ b/examples/example-lib1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@scope/example-lib1",
+  "name": "@example/example-lib1",
   "private": true,
   "version": "1.0.0",
   "license": "UNLICENSED",
