--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "version": "1.0.0",
   "license": "UNLICENSED",
+  "main": "",
   "author": {
     "name": "NetEnt AB (publ)",
     "email": "info@netent.com",
