--- a/examples/example-lib2/package.json
+++ b/examples/example-lib2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@scope/example-lib2",
+  "name": "@example/example-lib2",
   "private": false,
   "version": "1.0.2",
   "license": "UNLICENSED",
@@ -32,7 +32,7 @@
     "@netent/starterkit": "*"
   },
   "dependencies": {
-    "@scope/example-lib1": "*",
+    "@example/example-lib1": "*",
     "ts-node": "8.3.0"
   }
 }
