--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -16,7 +16,10 @@
   "main": "logger.ts",
   "scripts": {
     "dev": "parcel .playground/playground.html",
-    "compile": "del dist && tsc -b tsconfig.json --pretty"
+    "clean": "del node_modules/.tmp",
+    "compile": "yarn clean && run-p compile:*",
+    "compile:js": "npx babel ./ --root-mode upward --verbose --out-dir node_modules/.tmp/build.babel --extensions \".ts,.tsx\" --source-maps inline",
+    "compile:ts": "tsc -b tsconfig.json --pretty"
   },
   "dependencies": {
     "@types/figures": "3.0.1",
